force-app/main/default/objects/Contact/fields/Allowances__c.field-meta.xml
<CustomField>
    <fullName>Allowances__c</fullName>
    <label>Allowances</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GRA</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Housing</fullName>
            </value>
            <value>
                <fullName>Fooding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>