force-app/main/default/objects/Contact/fields/Allowed__c.field-meta.xml
<CustomField>
    <fullName>Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allowed</label>
    <type>Checkbox</type>
</CustomField>