force-app/main/default/objects/Contact/fields/AutomobileNo__c.field-meta.xml
<CustomField>
    <fullName>AutomobileNo__c</fullName>
    <displayFormat>AM-{0000}</displayFormat>
    <label>AutomobileNo.</label>
    <type>AutoNumber</type>
</CustomField>