force-app/main/default/objects/Contact/fields/Basic__c.field-meta.xml
<CustomField>
    <fullName>Basic__c</fullName>
    <formula>CTC__c /2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Basic</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>