force-app/main/default/objects/Contact/fields/Conveyence__c.field-meta.xml
<CustomField>
    <fullName>Conveyence__c</fullName>
    <label>Conveyence</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>