force-app/main/default/objects/Contact/fields/CustomerId__c.field-meta.xml
<CustomField>
    <fullName>CustomerId__c</fullName>
    <displayFormat>CM-{0000}</displayFormat>
    <label>CustomerId</label>
    <type>AutoNumber</type>
</CustomField>