force-app/main/default/objects/Contact/fields/DA__c.field-meta.xml
<CustomField>
    <fullName>DA__c</fullName>
    <formula>CTC__c /20</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>