force-app/main/default/objects/Contact/fields/Date_of_submmittion__c.field-meta.xml
<CustomField>
    <fullName>Date_of_submmittion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of submmittion</label>
    <type>DateTime</type>
</CustomField>