force-app/main/default/objects/Contact/fields/EmployeeId__c.field-meta.xml
<CustomField>
    <fullName>EmployeeId__c</fullName>
    <displayFormat>E-{0000}</displayFormat>
    <label>EmployeeId</label>
    <type>AutoNumber</type>
</CustomField>