force-app/main/default/objects/Contact/fields/FINE_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>FINE_AMOUNT__c</fullName>
    <label>FINE AMOUNT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>