force-app/main/default/objects/Contact/fields/HRA__c.field-meta.xml
<CustomField>
    <fullName>HRA__c</fullName>
    <formula>CTC__c *(2/5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HRA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>