force-app/main/default/objects/Contact/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>