force-app/main/default/objects/Contact/fields/keeping_Days__c.field-meta.xml
<CustomField>
    <fullName>keeping_Days__c</fullName>
    <formula>ABS(Date_of_issue__c - Date_of_submmittion__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>keeping Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>