force-app/main/default/objects/Contact/fields/mfb__LinkName__c.field-meta.xml
<CustomField>
    <fullName>mfb__LinkName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MyFeelBack - Link Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>