force-app/main/default/objects/Contact/fields/mfb__LinkURL__c.field-meta.xml
<CustomField>
    <fullName>mfb__LinkURL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MyFeelBack - Link URL</label>
    <type>Url</type>
</CustomField>