force-app/main/default/objects/Contact/fields/mfb__Message__c.field-meta.xml
<CustomField>
    <fullName>mfb__Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MyFeelBack - Message</label>
    <type>TextArea</type>
</CustomField>