force-app/main/default/objects/Contact/fields/mfb__Title__c.field-meta.xml
<CustomField>
    <fullName>mfb__Title__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MyFeelBack - Survey Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>