force-app/main/default/objects/Contact/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>X</fullName>
            </value>
            <value>
                <fullName>y</fullName>
            </value>
            <value>
                <fullName>z</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>