force-app/main/default/objects/Contact/fields/NOC__c.field-meta.xml
<CustomField>
    <fullName>NOC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NOC</label>
    <type>Checkbox</type>
</CustomField>