force-app/main/default/objects/Contact/fields/Noofvehicles__c.field-meta.xml
<CustomField>
    <fullName>Noofvehicles__c</fullName>
    <label>Noofvehicles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>