force-app/main/default/objects/Contact/fields/Phone_no__c.field-meta.xml
<CustomField>
    <fullName>Phone_no__c</fullName>
    <label>Phone no</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>