force-app/main/default/objects/Contact/fields/Phoneno__c.field-meta.xml
<CustomField>
    <fullName>Phoneno__c</fullName>
    <label>Phoneno</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>