force-app/main/default/objects/Contact/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <label>Price</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Model__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>200000</fullName>
            </value>
            <value>
                <fullName>500000</fullName>
            </value>
            <value>
                <fullName>600000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>