force-app/main/default/objects/Contact/fields/Promo__c.field-meta.xml
<CustomField>
    <fullName>Promo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Promo</label>
    <type>Checkbox</type>
</CustomField>