force-app/main/default/objects/Contact/fields/Types_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Types_of_Service__c</fullName>
    <label>Types of Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buying</fullName>
            </value>
            <value>
                <fullName>Servicing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>