force-app/main/default/objects/Contact/fields/Vehicle_Concerned__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Concerned__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Concerned</label>
    <length>18</length>
    <type>Text</type>
</CustomField>