force-app/main/default/objects/Contact/fields/ZIP_CODE__c.field-meta.xml
<CustomField>
    <fullName>ZIP_CODE__c</fullName>
    <label>ZIP CODE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>