force-app/main/default/objects/Contact/recordTypes/dsfsdf.recordType-meta.xml
<RecordType>
    <fullName>dsfsdf</fullName>
    <active>true</active>
    <label>dsfsdf</label>
</RecordType>