force-app/main/default/objects/Contact/recordTypes/emp.recordType-meta.xml
<RecordType>
    <fullName>emp</fullName>
    <active>true</active>
    <label>emp</label>
</RecordType>