force-app/main/default/objects/Contact/recordTypes/Library.recordType-meta.xml
<RecordType>
    <fullName>Library</fullName>
    <active>true</active>
    <label>Library</label>
</RecordType>