force-app/main/default/objects/Contact/recordTypes/vehicles.recordType-meta.xml
<RecordType>
    <fullName>vehicles</fullName>
    <active>true</active>
    <label>vehicles</label>
</RecordType>