force-app/main/default/objects/Contact/validationRules/phone.validationRule-meta.xml
<ValidationRule>
    <fullName>phone</fullName>
    <active>true</active>
    <errorConditionFormula>Phoneno__c &lt;=999999999</errorConditionFormula>
    <errorMessage>Enter 10 digit phone number</errorMessage>
</ValidationRule>