force-app/main/default/objects/Contact/validationRules/phonetest.validationRule-meta.xml
<ValidationRule>
    <fullName>phonetest</fullName>
    <active>false</active>
    <errorConditionFormula>!(LEN(AssistantPhone ) ==10 &amp;&amp; ISNUMBER(AssistantPhone))</errorConditionFormula>
    <errorMessage>wrong phone number</errorMessage>
</ValidationRule>