force-app/main/default/objects/Contact/validationRules/tesing.validationRule-meta.xml
<ValidationRule>
    <fullName>tesing</fullName>
    <active>false</active>
    <errorConditionFormula>ISNULL( Account.Amount__c )</errorConditionFormula>
    <errorMessage>No vacancy</errorMessage>
</ValidationRule>