force-app/main/default/objects/Contact/validationRules/zip.validationRule-meta.xml
<ValidationRule>
    <fullName>zip</fullName>
    <active>true</active>
    <errorConditionFormula>ZIP_CODE__c &lt;=99999</errorConditionFormula>
    <errorMessage>its not 6 digit</errorMessage>
</ValidationRule>